Fixed angular element blink

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,12 @@
 extends layout
 
 block body
-  div(ng-controller='MyCtrl1', ng-init="getNotesLength()")
-    div(infinite-scroll='loadMore(limit)', infinite-scroll-disabled='endOfLine')
+  div(ng-controller='MyCtrl1', ng-init='getNotesLength()')
+    div(infinite-scroll='loadMore(limit)', infinite-scroll-disabled='endOfLine', class='ng-cloak')
       div(ng-repeat='note in notes')
-        div(ng-cloak, style='width: 800px; height: 200px; margin: auto 0; background-color: grey; margin-top: 10px;')
-          p {{note.sentence}}
+        div(style='width: 800px; height: 200px; margin: auto 0; background-color: grey; margin-top: 10px;')
+          p
+            | {{note.sentence}}
 
   script(src='/socket.io/socket.io.js')
   script(src='bower_components/angular/jquery.js')
