--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,9 @@
 html(ng-app="myApp")
   head
     meta(charset='utf8')
-    base(href='/')
+    meta(name="viewport", content="width=device-width; initial-scale=1.0")
     title Project e-note
+    link(rel='stylesheet', href='/css/bootstrap.min.css')
     link(rel='stylesheet', href='/css/app.css')
   body
     block body
