--- a/views/index.jade
+++ b/views/index.jade
@@ -1,26 +1,19 @@
 extends layout
 
 block body
-  nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
-      .navbar-header
-          button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-ex1-collapse')
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href='') Project E-NOTE
-        .collapse.navbar-collapse.navbar-ex1-collapse
-          form.navbar-form.navbar-right(role='search')
-            .form-group
-              input.form-control(type='text', placeholder='Search')
+  nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+    .navbar-header.pull-center
+      button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-ex1-collapse')
+        span.sr-only Toggle navigation
+        span.icon-bar
+        span.icon-bar
+        span.icon-bar
+      a.navbar-brand(href='#') Project E-NOTE
+    .collapse.navbar-collapse.navbar-ex1-collapse
+      form.navbar-form(role='search')
+        .form-group
 
-  div(class='container', ng-controller='MyCtrl1', ng-init='getNotesLength()')
-      div(class='row ng-cloak', infinite-scroll='loadMore(limit)', infinite-scroll-disabled='endOfLine')
-        div(ng-repeat='note in notes')
-          div(class='col-md-4 col-sm-6 item', style='margin-bottom: 20px;')
-            div(class='col-md-12 item', style='background-color: #f8f8f8;')
-              p(style='font-size: 120px; text-align: center;')
-               | {{note.sentence}}
+  div(ng-view)
 
   script(src='/socket.io/socket.io.js')
   script(src='bower_components/angular/jquery.js')
