--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html(ng-app="myApp")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Project e-note
     link(rel='stylesheet', href='/css/bootstrap.min.css')
+    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css')
     link(rel='stylesheet', href='/css/app.css')
   body
     block body
