--- a/views/partials/partial2.jade
+++ b/views/partials/partial2.jade
@@ -1,4 +1,3 @@
-p This is the partial for view 2.
-p
-  | Showing of 'interpolate' filter:
-  | {{ 'Current version is v%VERSION%.' | interpolate }}
+.container
+	.row
+		.col-md-12.noteDetail
