--- a/public/css/app.css
+++ b/public/css/app.css
@@ -51,6 +51,13 @@
     background-color: #FFFFFF;
 }
 
+
+/*Remove Safari/Chrome textinput/textarea glow*/
+:focus {
+  outline-color: transparent;
+  outline-style: none;
+}
+
 .form-group {
 	width: 25em;
 }
@@ -140,6 +147,39 @@ body {
 .animate-enter.animate-enter-active {
  /* The animation code itself */
  opacity: 1;
+}
+
+input[type=text]
+{
+    background-color: #f8f8f8;
+    border:solid 1px #BFBDBD;
+    color: #979797;
+    height: 28px;
+    padding-left:10px;
+    width: 191px;
+}
+input[type=button]
+{
+    background-color: #1E1E1E;
+    color: #979797;
+    height: 24px;
+    width: 103px;
+    color: #bbbbbb;
+    text-transform:uppercase;
+    box-shadow:-1px 2px #6E6B6A inset;
+}
+
+input[type=button], input[type=text]
+{
+    border: 1;
+    border-radius: 0px;
+    font-family: Sansation,Arial;
+}
+
+input:focus {
+	-webkit-box-shadow: 0 0 3px 1px #4d90fe;
+	-moz-box-shadow: 0 0 3px 1px #4d90fe;
+	box-shadow: 0 0 3px 1px #4d90fe;
 }
 
 
