--- a/views/index.jade
+++ b/views/index.jade
@@ -1,17 +1,24 @@
 extends layout
 
 block body
-  nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
-    .navbar-header.pull-center
-      button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-ex1-collapse')
-        span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
-      a.navbar-brand(href='#') Project E-NOTE
-    .collapse.navbar-collapse.navbar-ex1-collapse
-      form.navbar-form(role='search')
-        .form-group
+  nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
+      .navbar-header
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-ex5-collapse')
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href='#') EnoTe
+        .collapse.navbar-collapse.navbar-ex5-collapse(ng-controller='navbarController')
+          ul.nav.navbar-nav
+            li(ng-class="{'active': paths['/index'] == true}")
+              a(href='/') Home
+            li(ng-class="{'active': paths['/about'] == true}")
+              a(href='/about') About
+            li(ng-class="{'active': paths['/contact'] == true}")
+              a(href='/contact') Contact
+
+
 
   div(ng-view)
 
