--- a/views/partials/partial1.jade
+++ b/views/partials/partial1.jade
@@ -5,7 +5,7 @@ div(ng-controller='MyCtrl1', ng-init='getNotesLength()')
       div(ng-show='busy', class='col-md-offset-4', style='position:fixed; z-index:10; bottom:0;')
         p(style="font-size:40px;")
          | Loading data...
-      div(style='position: fixed; z-index: 10; background-color: #eee; left: 0; width: 100%;', ng-style='bottomShadow')
+      div(class='input-bar-container', ng-style='bottomShadow')
         .col-md-6.col-md-offset-3(style='padding-top: 22px; padding-bottom: 15px;')
           input(style='width:100%;', type='text', ng-model='query.sentence')
       div(class='row ng-cloak', style='padding-top: 5em;', infinite-scroll='loadMore(limit)', infinite-scroll-disabled='endOfLine')
@@ -18,6 +18,7 @@ div(ng-controller='MyCtrl1', ng-init='getNotesLength()')
                     div(class='row ng-cloak', ng-show='note.show == true', ng-animate="{show: 'fadeIn'}")
                         span.glyphicon.glyphicon-edit.edit-icon(ng-click='')
                         span.glyphicon.glyphicon-trash.edit-delete(ng-click="deleteNote($index)")
-                div(class='row')
-                  p
-                    | {{note.sentence}}
+                div(class='container')
+                  div(class='row')
+                    p
+                      | {{note.sentence}}
