--- a/views/partials/partial1.jade
+++ b/views/partials/partial1.jade
@@ -1,17 +1,15 @@
 div(ng-controller='MyCtrl1', ng-init='getNotesLength()')
 
-  div(class='row')
-    .container
+  div(class='container')
       div(ng-show='busy', class='col-md-offset-4', style='position:fixed; z-index:10; bottom:0;')
         p(style="font-size:40px;")
          | Loading data...
       div(class='input-bar-container', ng-style='bottomShadow')
-        .col-md-6.col-md-offset-3(style='padding-top: 22px; padding-bottom: 15px;')
+        .col-sm-6.col-md-6.col-sm-offset-3.col-md-offset-3(style='padding-top: 22px; padding-bottom: 15px;')
           input(style='width:100%;', type='text', ng-model='query.sentence')
       div(class='row ng-cloak', style='padding-top: 5em;', infinite-scroll='loadMore(limit)', infinite-scroll-disabled='endOfLine')
         div(ng-repeat='note in notes | filter: query')
-          div(class='col-md-4 item', style='margin-bottom: 20px;', ng-animate="{enter: 'animate-enter'}")
-            div(class='container')
+          div(class='col-sm-6 col-md-4 item', style='margin-bottom: 20px;', ng-animate="{enter: 'animate-enter'}")
               div(class='col-md-12 col-xs-12 noteStyle', ng-mouseover='showIcon($index)', ng-mouseleave='hideIcon($index)')
                 div(class='row')
                   div(class='col-md-12 note-tag-bar', ng-style='barColor($index)')
