--- a/views/partials/add.jade
+++ b/views/partials/add.jade
@@ -4,12 +4,15 @@
       .col-sm-8.col-md-8.col-sm-offset-2.col-md-offset-2(class='new-note-container')
         .row
           .col-md-12(class='add-note-tag-bar-container')
+            .row
+              h2(style='color: #f8f8f8; margin-top:0.5em; margin-left:43%')
+               | New
         .row
           .col-md-12
             .container
               form(role='form', ng-submit="addNote()")
                   .form-group
-                    label(for='inputPhrase') New Phrase
+                    label(for='inputPhrase') Phrase
                     input#phraseInput.form-control(type='text', ng-model='note.sentence')
                   .form-group
                     label(for='inputTranslation') You Understaning
