--- a/views/partials/contact.jade
+++ b/views/partials/contact.jade
@@ -14,4 +14,5 @@
             li
               p(style='font-size:20px;')
                 span(class="glyphicon glyphicon-envelope")
-                 a(href='mailto:enthalpy.yan@gmail.com')  enthalpy.yan@gmail.com
+                  a(href='mailto:lastforeverzl@gmail.com') lastforeverzl@gmail.com
+                  a(href='mailto:enthalpy.yan@gmail.com')  enthalpy.yan@gmail.com
