Removed overflow scrollbar

--- a/views/partials/partial1.jade
+++ b/views/partials/partial1.jade
@@ -20,13 +20,7 @@ div(ng-controller='MyCtrl1', ng-init='getNotesLength()')
                       .col-xs-3.col-sm-3.col-md-3(style='height:40px;', ng-show='note.show == true', ng-animate="{show: 'fadeIn'}")
                         span.glyphicon.glyphicon-edit.edit-icon(ng-click='')
                         span.pull-right.glyphicon.glyphicon-trash.edit-delete(ng-click="deleteNote($index)")
-                    //- div(class='row')
-                    //-   div(class='.col-xs-6.col-sm-6.col-md-6')
-                    //-     {{note.createdAt | date:'MMM dd'}} 
-                    //-   div(class='ng-cloak .col-xs-6.col-sm-6.col-md-6', ng-show='note.show == true', ng-animate="{show: 'fadeIn'}")
-                    //-     span.glyphicon.glyphicon-edit.edit-icon(ng-click='') 
-                    //-     span.glyphicon.glyphicon-trash.edit-delete(ng-click="deleteNote($index)")
-                div(class='container', style='height:180px; overflow:scroll;')
+                div(class='container', style='height:180px;')
                   div(class='row')
                     .container
                       div(class='row note-content')
