--- a/public/css/app.css
+++ b/public/css/app.css
@@ -173,7 +173,7 @@ body {
   opacity: 1;
 }
 .fadeOut.fadeOut-active{
-    opacity:0;
+  opacity:0;
 }
 
 .fadeIn, .fadeOut {
@@ -192,7 +192,7 @@ body {
   opacity: 1;
 }
 .fadeOut.fadeOut-active{
-    opacity:0;
+  opacity:0;
 }
 
 /*note content stylesheet*/
@@ -200,6 +200,7 @@ body {
   margin-top: 9px;
   color: #777;
   font-size: 18px;
+  overflow: hidden; 
 }
 
 
