--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -6,7 +6,7 @@
         .col-md-6
           p(style='font-size:20px;')
             | The EnoTe is a simple note app helps you remember english phase you have encountered in daily life.
-          h3
-            | Features
-          p(style='font-size:20px;')
-          	| 
+          //- h3
+          //-   | Features
+          //- p(style='font-size:20px;')
+          //- 	| 
