Fixed loading data icon blink when scrolling down to refresh the page

--- a/views/partials/partial1.jade
+++ b/views/partials/partial1.jade
@@ -6,7 +6,7 @@ div(ng-controller='MyCtrl1', ng-init='getNotesLength()')
       div(class='input-bar-container', ng-style='bottomShadow')
         .col-sm-6.col-md-6.col-sm-offset-3.col-md-offset-3(style='padding-top: 22px; padding-bottom: 15px;')
           input(style='width:100%;', type='text', ng-model='query')
-      div(class='row ng-cloak', style='padding-top: 5em;', infinite-scroll='loadMore(limit)', infinite-scroll-disabled='endOfLine')
+      div(class='row ng-cloak', style='padding-top: 5em;', infinite-scroll='loadMore(limit)', infinite-scroll-disabled='busy')
         div(ng-repeat='note in notes | filter: query')
           div(class='col-sm-6 col-md-4 item', style='margin-bottom: 20px;', ng-animate="{enter: 'animate-enter'}")
               div(class='col-md-12 col-xs-12 noteStyle', ng-mouseover='showIcon($index)', ng-mouseleave='hideIcon($index)')
