Refactoring front-end

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,29 +1,32 @@
 extends layout
 
 block body
-  nav.navbar.navbar-default.navbar-fixed-top(role='navigation', ng-controller='navbarController')
-    div(class='container')
-      .navbar-header
-          button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-ex5-collapse')
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(style='font-size:23px;',href='#') EnoTe
-        .collapse.navbar-collapse.navbar-ex5-collapse#slideMenu
-          ul.nav.navbar-nav
-            li(ng-class="{'active': paths['/index'] == true}")
-              a(href='/', ng-click='collapseFunc()') Home
-            li(ng-class="{'active': paths['/about'] == true}")
-              a(href='/about', ng-click='collapseFunc()') About
-            li(ng-class="{'active': paths['/contact'] == true}")
-              a(href='/contact', ng-click='collapseFunc()') Contact
-          ul.nav.navbar-nav.navbar-right
-            li(ng-class="{'active': paths['/add'] == true}")
-              a(class="glyphicon glyphicon-pencil", style='font-size:16px; cursor: pointer;', href='/add', ng-click='collapseFunc()') ADD
-
-
-
+  header
+    nav.navbar.navbar-default.navbar-fixed-top.my-navbar(role='navigation')
+      .container
+        .navbar-header
+            button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-ex5-collapse')
+              span.sr-only Toggle navigation
+              span.icon-bar
+              span.icon-bar
+              span.icon-bar
+            a.navbar-brand(style='font-size:30px;',href='#') 
+              span(style='font-size:35px;')
+                | E
+              span
+                | note
+          .collapse.navbar-collapse.navbar-ex5-collapse.pull-left
+            ul.nav.navbar-nav
+              li
+                a(href='/') Find
+              li
+                a(href='/about') Keep
+              li
+                a(href='/contact') Contact
+          .search-bar-container.pull-right
+            form(class="search", method="post", action="")
+                input(name="searchstring", class="icon-search", type="text")
+  
   div(ng-view)
 
   script(src='/socket.io/socket.io.js')
