--- a/public/stylesheets/less/navbar.less
+++ b/public/stylesheets/less/navbar.less
@@ -354,6 +354,10 @@
 .navbar-default {
   background-color: @navbar-default-bg;
   border-color: @navbar-default-border;
+  opacity: 0.95;
+  -webkit-opacity: 0.95;
+  -moz-opacity: 0.95;
+  -o-opacity: 0.95;
 
   .navbar-brand {
     color: @navbar-default-brand-color;
