--- a/views/partials/partial1.jade
+++ b/views/partials/partial1.jade
@@ -1,22 +1,23 @@
 section
-  #main-content(ng-cloak, ng-init='loadNotes(9)')
-    .row
-      .container
+  #main-content(ng-cloak, ng-init='loadNotes(12)')
+    .container(style='padding-top: 108px;')
+      .row
         .col-md-12
           .alert.alert-info.my-alert(ng-click='loadNewNote()', ng-model='newNoteCount', ng-show='newNoteFlag', ng-animate="{show: 'fadeIn'}")
             | You have {{newNoteCount}} new note. Click to refresh.
         div(ng-repeat='item in note.notes')
-          div(class='col-sm-6 col-md-4')
+          div(class='col-sm-6 col-md-3')
             div(class='col-md-12', id='note')
               article
-                header
-                  .ribbon(title='I AM P')
-                    | P
+                .row 
+                  .note-tag-bar.col-md-12
+                    header
+                      | {{item.createdAt | date:'MMM dd'}}
+                .row
                 section
                   | {{item.sentence}}
 
-    .row
-      .container 
+      .row
         .col-md-12
           div(id='load-more-bar', ng-show='note.notes.length != 0', ng-click='nextPage()')
             p(id='more')
