--- a/public/stylesheets/css/app.css
+++ b/public/stylesheets/css/app.css
@@ -86,7 +86,7 @@ body {
 }
 
 .note-tag-bar {
-    background: #2980b9;
+    background: #95a5a6;
     height: 40px;
     padding-top: 10px;
     color: #fff;
@@ -179,6 +179,182 @@ input.icon-search {
 	}
 }
 
+
+/*css load*/
+#fadingBarsG{
+position:relative;
+width:83px;
+height:10px}
+
+.fadingBarsG{
+position:absolute;
+top:0;
+background-color:#666666;
+width:10px;
+height:10px;
+-moz-animation-name:bounce_fadingBarsG;
+-moz-animation-duration:1.1s;
+-moz-animation-iteration-count:infinite;
+-moz-animation-direction:linear;
+-moz-transform:scale(.3);
+-webkit-animation-name:bounce_fadingBarsG;
+-webkit-animation-duration:1.1s;
+-webkit-animation-iteration-count:infinite;
+-webkit-animation-direction:linear;
+-webkit-transform:scale(.3);
+-o-animation-name:bounce_fadingBarsG;
+-o-animation-duration:1.1s;
+-o-animation-iteration-count:infinite;
+-o-animation-direction:linear;
+-o-transform:scale(.3);
+-ms-animation-name:bounce_fadingBarsG;
+-ms-animation-duration:1.1s;
+-ms-animation-iteration-count:infinite;
+-ms-animation-direction:linear;
+-ms-transform:scale(.3);
+animation-name:bounce_fadingBarsG;
+animation-duration:1.1s;
+animation-iteration-count:infinite;
+animation-direction:linear;
+transform:scale(.3);
+}
+
+#fadingBarsG_1{
+left:0;
+-moz-animation-delay:0.44s;
+-webkit-animation-delay:0.44s;
+-o-animation-delay:0.44s;
+-ms-animation-delay:0.44s;
+animation-delay:0.44s;
+}
+
+#fadingBarsG_2{
+left:10px;
+-moz-animation-delay:0.55s;
+-webkit-animation-delay:0.55s;
+-o-animation-delay:0.55s;
+-ms-animation-delay:0.55s;
+animation-delay:0.55s;
+}
+
+#fadingBarsG_3{
+left:21px;
+-moz-animation-delay:0.66s;
+-webkit-animation-delay:0.66s;
+-o-animation-delay:0.66s;
+-ms-animation-delay:0.66s;
+animation-delay:0.66s;
+}
+
+#fadingBarsG_4{
+left:31px;
+-moz-animation-delay:0.77s;
+-webkit-animation-delay:0.77s;
+-o-animation-delay:0.77s;
+-ms-animation-delay:0.77s;
+animation-delay:0.77s;
+}
+
+#fadingBarsG_5{
+left:42px;
+-moz-animation-delay:0.88s;
+-webkit-animation-delay:0.88s;
+-o-animation-delay:0.88s;
+-ms-animation-delay:0.88s;
+animation-delay:0.88s;
+}
+
+#fadingBarsG_6{
+left:52px;
+-moz-animation-delay:0.99s;
+-webkit-animation-delay:0.99s;
+-o-animation-delay:0.99s;
+-ms-animation-delay:0.99s;
+animation-delay:0.99s;
+}
+
+#fadingBarsG_7{
+left:62px;
+-moz-animation-delay:1.1s;
+-webkit-animation-delay:1.1s;
+-o-animation-delay:1.1s;
+-ms-animation-delay:1.1s;
+animation-delay:1.1s;
+}
+
+#fadingBarsG_8{
+left:73px;
+-moz-animation-delay:1.21s;
+-webkit-animation-delay:1.21s;
+-o-animation-delay:1.21s;
+-ms-animation-delay:1.21s;
+animation-delay:1.21s;
+}
+
+@-moz-keyframes bounce_fadingBarsG{
+0%{
+-moz-transform:scale(1);
+background-color:#666666;
+}
+
+100%{
+-moz-transform:scale(.3);
+background-color:#ffffff;
+}
+
+}
+
+@-webkit-keyframes bounce_fadingBarsG{
+0%{
+-webkit-transform:scale(1);
+background-color:#666666;
+}
+
+100%{
+-webkit-transform:scale(.3);
+background-color:#ffffff;
+}
+
+}
+
+@-o-keyframes bounce_fadingBarsG{
+0%{
+-o-transform:scale(1);
+background-color:#666666;
+}
+
+100%{
+-o-transform:scale(.3);
+background-color:#ffffff;
+}
+
+}
+
+@-ms-keyframes bounce_fadingBarsG{
+0%{
+-ms-transform:scale(1);
+background-color:#666666;
+}
+
+100%{
+-ms-transform:scale(.3);
+background-color:#ffffff;
+}
+
+}
+
+@keyframes bounce_fadingBarsG{
+0%{
+transform:scale(1);
+background-color:#666666;
+}
+
+100%{
+transform:scale(.3);
+background-color:#ffffff;
+}
+
+} - See more at: http://cssload.net/#sthash.AMu29ekE.dpuf
 
 
 
