--- a/views/index.jade
+++ b/views/index.jade
@@ -20,7 +20,7 @@ block body
               li
                 a(href='/') Find
               li
-                a(href='/about') Keep
+                a(href='/about') About
               li
                 a(href='/contact') Contact
           .search-bar-container.pull-right
