--- a/views/partials/partial1.jade
+++ b/views/partials/partial1.jade
@@ -12,10 +12,10 @@ section
                 .row 
                   .note-tag-bar.col-md-12
                     header
-                      | {{item.createdAt | date:'MMM dd'}}
+                      //- | {{item.createdAt | date:'MMM dd'}}
                 .row
                 section
-                  | {{item.sentence}}   
+                  //- | {{item.sentence}}   
 
       .row
         .col-md-12
