--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,5 +8,6 @@ html(ng-app="myApp")
     link(rel='stylesheet', type='text/css', href='//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css')
     link(rel='stylesheet', type='text/css', href='/stylesheets/css/app.css')
     link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Roboto' )
+    link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' )
   body
     block body
