--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -1,12 +1,26 @@
-.container
-    .page-header
-        h1
-          | About
+.wrapper(style='background-color: #fff; height: 100%;')
+  .row
+    .container
       .row
-        .col-md-6
-          p(style='font-size:20px;')
-            | The EnoTe is a simple note app helps you remember english phase you have encountered in daily life.
-          //- h3
-          //-   | Features
-          //- p(style='font-size:20px;')
-          //- 	| 
+        section.col-md-10.col-md-offset-1
+          h1(id='about-head')
+            span
+              | A fun way to learn 
+            | American English
+          h2(id='description')
+            | The palest ink is better than the best memory. 
+            | We design websites that help to remember what you've learned from daily life, also share with others.
+      .row
+        section.col-md-10.col-md-offset-1
+          #img-container
+  .row(style='background-color: #fff; height:300px;')
+
+
+    //- .page-header
+    //-     h1
+    //-       | About
+    //-   .row
+    //-     .col-md-6
+    //-       p(style='font-size:20px;')
+    //-         | The EnoTe is a simple note app helps you remember english phase you have encountered in daily life.
+
