--- a/public/stylesheets/css/app.css
+++ b/public/stylesheets/css/app.css
@@ -49,6 +49,18 @@ body {
 #main-container {
 }
 
+.edit-icon {
+  position: absolute;
+  font-size: 29px;
+  left: -10px;
+  top: -1px;
+  color: #b9b9b9;
+}
+
+.edit-icon:hover {
+  color: #707070;
+}
+
 .my-alert {
 	text-align: center;
 	cursor: pointer;
@@ -122,7 +134,7 @@ input[type=text] {
 }
 
 input[type=text]:focus {
-    width: 200px;
+    width: 300px;
     padding: 3px 0px 3px 50px;
     min-height: 50px;
     font-size: 1.4em;
@@ -147,6 +159,14 @@ input.icon-search {
 		box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.05);
 	}
 
+  .link-top-border {
+    border-top: 3px solid #fff;
+  }
+
+  .link-top-border:hover, :focus{
+    border-top: 3px solid #777777;
+  }
+
 	#main-content {
 		padding-top: 20px;
 	}
@@ -158,9 +178,6 @@ input.icon-search {
 	}
 
 	.search-bar-container {
-		display: block;
-		position: absolute;
-		right: 140px;
 	}
 }
 
@@ -172,11 +189,11 @@ input.icon-search {
   	}*/
 
 	.search-bar-container {
-		display: block;
-		position: absolute;
-		right: 60px;
-		top:0; /*Put search bar inside menu*/
 	}
+
+  .hide-mobile {
+    display: none !important;
+  }
 }
 
 /*About page stylesheets*/
@@ -213,185 +230,3 @@ input.icon-search {
 h1, h2{
   font-family: 'Source Sans Pro',sans-serif;
 }
-
-
-/*css load*/
-#fadingBarsG{
-position:relative;
-width:83px;
-height:10px}
-
-.fadingBarsG{
-position:absolute;
-top:0;
-background-color:#666666;
-width:10px;
-height:10px;
--moz-animation-name:bounce_fadingBarsG;
--moz-animation-duration:1.1s;
--moz-animation-iteration-count:infinite;
--moz-animation-direction:linear;
--moz-transform:scale(.3);
--webkit-animation-name:bounce_fadingBarsG;
--webkit-animation-duration:1.1s;
--webkit-animation-iteration-count:infinite;
--webkit-animation-direction:linear;
--webkit-transform:scale(.3);
--o-animation-name:bounce_fadingBarsG;
--o-animation-duration:1.1s;
--o-animation-iteration-count:infinite;
--o-animation-direction:linear;
--o-transform:scale(.3);
--ms-animation-name:bounce_fadingBarsG;
--ms-animation-duration:1.1s;
--ms-animation-iteration-count:infinite;
--ms-animation-direction:linear;
--ms-transform:scale(.3);
-animation-name:bounce_fadingBarsG;
-animation-duration:1.1s;
-animation-iteration-count:infinite;
-animation-direction:linear;
-transform:scale(.3);
-}
-
-#fadingBarsG_1{
-left:0;
--moz-animation-delay:0.44s;
--webkit-animation-delay:0.44s;
--o-animation-delay:0.44s;
--ms-animation-delay:0.44s;
-animation-delay:0.44s;
-}
-
-#fadingBarsG_2{
-left:10px;
--moz-animation-delay:0.55s;
--webkit-animation-delay:0.55s;
--o-animation-delay:0.55s;
--ms-animation-delay:0.55s;
-animation-delay:0.55s;
-}
-
-#fadingBarsG_3{
-left:21px;
--moz-animation-delay:0.66s;
--webkit-animation-delay:0.66s;
--o-animation-delay:0.66s;
--ms-animation-delay:0.66s;
-animation-delay:0.66s;
-}
-
-#fadingBarsG_4{
-left:31px;
--moz-animation-delay:0.77s;
--webkit-animation-delay:0.77s;
--o-animation-delay:0.77s;
--ms-animation-delay:0.77s;
-animation-delay:0.77s;
-}
-
-#fadingBarsG_5{
-left:42px;
--moz-animation-delay:0.88s;
--webkit-animation-delay:0.88s;
--o-animation-delay:0.88s;
--ms-animation-delay:0.88s;
-animation-delay:0.88s;
-}
-
-#fadingBarsG_6{
-left:52px;
--moz-animation-delay:0.99s;
--webkit-animation-delay:0.99s;
--o-animation-delay:0.99s;
--ms-animation-delay:0.99s;
-animation-delay:0.99s;
-}
-
-#fadingBarsG_7{
-left:62px;
--moz-animation-delay:1.1s;
--webkit-animation-delay:1.1s;
--o-animation-delay:1.1s;
--ms-animation-delay:1.1s;
-animation-delay:1.1s;
-}
-
-#fadingBarsG_8{
-left:73px;
--moz-animation-delay:1.21s;
--webkit-animation-delay:1.21s;
--o-animation-delay:1.21s;
--ms-animation-delay:1.21s;
-animation-delay:1.21s;
-}
-
-@-moz-keyframes bounce_fadingBarsG{
-0%{
--moz-transform:scale(1);
-background-color:#666666;
-}
-
-100%{
--moz-transform:scale(.3);
-background-color:#ffffff;
-}
-
-}
-
-@-webkit-keyframes bounce_fadingBarsG{
-0%{
--webkit-transform:scale(1);
-background-color:#666666;
-}
-
-100%{
--webkit-transform:scale(.3);
-background-color:#ffffff;
-}
-
-}
-
-@-o-keyframes bounce_fadingBarsG{
-0%{
--o-transform:scale(1);
-background-color:#666666;
-}
-
-100%{
--o-transform:scale(.3);
-background-color:#ffffff;
-}
-
-}
-
-@-ms-keyframes bounce_fadingBarsG{
-0%{
--ms-transform:scale(1);
-background-color:#666666;
-}
-
-100%{
--ms-transform:scale(.3);
-background-color:#ffffff;
-}
-
-}
-
-@keyframes bounce_fadingBarsG{
-0%{
-transform:scale(1);
-background-color:#666666;
-}
-
-100%{
-transform:scale(.3);
-background-color:#ffffff;
-}
-
-}
-
-
-
-
-
