--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html(ng-app="myApp")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Project EnoTe
     link(rel='stylesheet', type='text/css', href='/stylesheets/css/bootstrap.min.css')
+    link(rel='stylesheet', type='text/css', href='/stylesheet/css/modal.css' )
     link(rel='stylesheet', type='text/css', href='//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css')
     link(rel='stylesheet', type='text/css', href='/stylesheets/css/app.css')
     link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Roboto' )
